--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -50,9 +50,10 @@ p#post_title{
 }
 
 #post_cita{
-	font-weight:bold;
-	font-size:10pt;
-	padding-left:0.2cm;
+	/*font-weight:bold;*/
+	font-size:13pt;
+	padding-left:1.3cm;
+	text-align:justify;
 	
 }
 
